﻿			     BZFlag Release Notes
			     ====================

BZFlag 2.0.1
------------

* Server announces who started a countdown - Angelina Carlton
* Fixed server start menu for windows - Daniel Remenak
* Message spam fixed - Alfredo Tupone
* Fixed no flag on building - Alfredo Tupone
* Fixed MsgQueryPlayer eventually sending AddPlayer to all - Alfredo Tupone
* Removing kicking player for missing packet - Alfredo Tupone
* Player is unpaused when coming alive - Alfredo Tupone
* Observer of winner not updating the flag fixed - Alfredo Tupone
* Fixed 2 flag per team selecting ctf on world & CommandLine - Alfredo Tupone
* Fixed lag warning counted twice - Alfredo Tupone
* Allow user to select which physical joystick axes to use - Daniel Remenak
* Fix a number of server crash bugs - Daniel Remenak
* ctf make restarting on base even when dead - Anonymous 
* Fixed weirdness on Console Panel when disabling chat display - Alfredo Tupone
* Fixed a segfault with SDL and no audio - Alfredo Tupone
* bzadmin wipes argv to hide possible password - Tim Riker
* Lagstats and Playerlist no longer filtered - Steve Krenzel
* print errors in red - Frank Thilo
* simple scroll indicator for control panel - Frank Thilo
* antiban perm actually counters a server ban now - Steve Krenzel

BZFlag 2.0.0  "Falcor's Despair" (2004-01-17)
---------------------------------------------

* Added a .desktop file - David Trowbridge
* Tool for converting obj to bzw - Jeff Myers
* Addition of converted ProFont font - Andrew Keyser
* Added a file syntax section to bzw.5 - Fred Cods
* Added a bzw.5 manpage to document world file format - Sean Morrison
* Added /quit command - Angelina Carlton
* Display player addr on join to admins - Sean Morrison
* Make -debug a public client option - Frank Thilo
* Communicate autopilot state, display in scoreboard - Frank Thilo
* Observer counts and match times added to game queries - David Vuorio
* Central authentication - Tim Riker